--- a/Notes.html
+++ b/Notes.html
@@ -570,8 +570,8 @@ int quotient = a / b; // 2</code></pre>
                                 <i class="fas fa-envelope fa-2x text-primary"></i>
                             </div>
                             <h5>Email</h5>
-                            <p>📧 yourname@example.com</p>
-                            <a href="https://mail.google.com/mail/u/0/?fs=1&to=amanalisiwan22@gmail.com&tf=cm" class="btn btn-sm btn-outline-primary">
+                            <p>📧 sarmilpani37@example.com</p>
+                            <a href="https://mail.google.com/mail/u/0/?fs=1&to=sarmilpani37@gmail.com&tf=cm" class="btn btn-sm btn-outline-primary">
                                 Send Email
                             </a>
                         </div>
@@ -584,8 +584,8 @@ int quotient = a / b; // 2</code></pre>
                                 <i class="fab fa-github fa-2x text-dark"></i>
                             </div>
                             <h5>GitHub</h5>
-                            <p>💻 github.com/yourusername</p>
-                            <a href="https://github.com/AmanSah078" target="_blank" class="btn btn-sm btn-outline-dark">
+                            <p>💻 github.com/sarmilpani-code</p>
+                            <a href="https://github.com/sarmilpani-code" target="_blank" class="btn btn-sm btn-outline-dark">
                                 View Projects
                             </a>
                         </div>
@@ -599,7 +599,7 @@ int quotient = a / b; // 2</code></pre>
                             </div>
                             <h5>LinkedIn</h5>
                             <p>💼 linkedin.com/in/yourprofile</p>
-                            <a href="https://www.linkedin.com/in/aman-ali-82053a2b8/" target="_blank" class="btn btn-sm btn-outline-info">
+                            <a href="https://www.linkedin.com/in/sarmil-pani-628710287/" target="_blank" class="btn btn-sm btn-outline-info">
                                 Connect
                             </a>
                         </div>
